[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Vermin Vibes 1989.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Button Hover Sound Effect __ Copyright Free with Download Link __ 251390.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/Keyboard Extras.png" type="Texture" id=3]
[ext_resource path="res://assets/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Screens/LeaderboardScene.gd" type="Script" id=5]
[ext_resource path="res://assets/Keyboard Letters and Symbols.png" type="Texture" id=6]
[ext_resource path="res://assets/sound/One_Two_ExterminateMP3.mp3" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 0, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 48, 144, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 96, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 96, 80, 32, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 32, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 32, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 32, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 0, 80, 32, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 96, 176, 16, 16 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "a",
"speed": 2.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "back",
"speed": 2.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "d",
"speed": 2.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "enter",
"speed": 2.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "s",
"speed": 2.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "shift",
"speed": 2.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "space",
"speed": 2.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "w",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=35]
font_data = ExtResource( 4 )

[node name="LeaderboardScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -17.0
margin_right = 1049.0
margin_bottom = 624.0

[node name="Label2" type="Label" parent="."]
margin_left = 90.0
margin_top = -31.0
margin_right = 898.0
margin_bottom = 137.0
mouse_default_cursor_shape = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "leaderboard"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Label2"]
margin_left = 136.0
margin_top = 2.0
margin_right = 676.0
margin_bottom = 170.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "laderboard"
align = 1
valign = 1

[node name="backButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 40.0
margin_right = 157.0
margin_bottom = 83.0
__meta__ = {
"_edit_group_": true
}

[node name="back" type="AnimatedSprite" parent="backButton"]
position = Vector2( 68, 11 )
scale = Vector2( 4.95312, 4.95312 )
frames = SubResource( 16 )
animation = "back"
playing = true

[node name="backButton2" type="Button" parent="."]
margin_left = 412.0
margin_top = 290.0
margin_right = 549.0
margin_bottom = 333.0
__meta__ = {
"_edit_group_": true
}

[node name="back" type="AnimatedSprite" parent="backButton2"]
position = Vector2( 68, 11 )
scale = Vector2( 4.95312, 4.95312 )
frames = SubResource( 16 )
animation = "back"
playing = true

[node name="hover" type="AudioStreamPlayer" parent="."]
pause_mode = 1
stream = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 174.0
margin_top = 133.0
margin_right = 850.0
margin_bottom = 350.0

[node name="PlayernameContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 340.0
margin_bottom = 217.0
grow_horizontal = 0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/PlayernameContainer"]
margin_right = 108.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = " Player Name"
align = 1
uppercase = true

[node name="TimeContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 344.0
margin_right = 452.0
margin_bottom = 217.0

[node name="Label" type="Label" parent="HBoxContainer/TimeContainer"]
margin_right = 108.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = " Player Name"
align = 1
uppercase = true

[node name="PlayernameContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 456.0
margin_right = 564.0
margin_bottom = 217.0
grow_horizontal = 0

[node name="Label" type="Label" parent="HBoxContainer/PlayernameContainer2"]
margin_right = 108.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = " Player Name"
align = 1
uppercase = true

[node name="PlayernameContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 568.0
margin_right = 676.0
margin_bottom = 217.0
grow_horizontal = 0

[node name="Label" type="Label" parent="HBoxContainer/PlayernameContainer3"]
margin_right = 108.0
margin_bottom = 15.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 35 )
text = " Player Name"
align = 1
uppercase = true

[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="backButton2" to="." method="_on_backButton2_pressed"]
